# sgx-branch-shadowing-mitigation

./: README.md  cmake_debug.sh
module_lbr_chardev/: .gitignore  CMakeLists.txt
module_lbr_chardev/module/: .gitignore  Makefile  attributes.h  getcpu.h  lbr_dumper.c  lbr_dumper.h  lbr_tools.c  lbr_tools.h  perf_attr.h
module_lbr_chardev/scripts/: setup_mknod.pl
module_lbr_chardev/tester/: test.c  trigger_dump.c
shadow_code/: CMakeLists.txt
shadow_code/cmake/: FindSGXSDK.cmake  FindSpdlog.cmake
shadow_code/config/: config.h
shadow_code/lib/spdlog/: tweakme.h
shadow_code/scripts/: CMakeLists.txt  run_enclave_jne.pl
shadow_code/shared/: build.h.in  common.h  victim_shared.c
shadow_code/trusted/: CMakeLists.txt  sample.config.xml.in  sample.edl  sample.lds  sample_trusted.cpp  sample_trusted.h
shadow_code/untrusted/: BranchShadow.cpp  BranchShadow.h  CMakeLists.txt  main.cpp  victim.c  victim.h
shadow_code/untrusted/mem/: AlignedMem.cpp  AlignedMem.h  Pointers.cpp  Pointers.h
shadow_code/untrusted/misc/: BpuUtils.cpp  BpuUtils.h  Enclave.cpp  Enclave.h  LbrReader.cpp  LbrReader.h  LbrStats.cpp  LbrStats.h  Logger.cpp  Logger.h  MiniStatistics.cpp  MiniStatistics.h  attributes.h  lbr_tools.h  util.cpp  util.h
shadow_code/untrusted/shadow/: SegEaxAndOne.cpp  SegEaxAndOne.h  SegEaxAndOneIndir.cpp  SegEaxAndOneIndir.h  SegEaxWrite.cpp  SegEaxWrite.h  SegJneEaxZero.cpp  SegJneEaxZero.h  SegJump.cpp  SegJump.h  SegJumpR13.cpp  SegJumpR13.h  SegLongJump.cpp  SegLongJump.h  SegNop.cpp  SegNop.h  SegRetq.cpp  SegRetq.h  SegSetPosInReg.cpp  SegSetPosInReg.h  Shadow.cpp  Shadow.h  ShadowSegment.cpp  ShadowSegment.h
shadow_code/untrusted/test/: Test.cpp  Test.h
victim_example/: victim.c
